--- a/packages/browser/src/pages/index.module.css
+++ b/packages/browser/src/pages/index.module.css
@@ -1,8 +1,17 @@
+.pageContainer {
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+}
+
+.title {
+  color: #0754ad;
+  margin: 0;
+  line-height: 1.15;
+  font-size: 4rem;
+}
+
 .link {
   color: #0754ad;
   text-decoration: none;
-}
-
-.pageContainer {
-  background-color: red;
 }
