--- a/packages/browser/src/pages/index.module.css
+++ b/packages/browser/src/pages/index.module.css
@@ -1,14 +1,16 @@
 .pageContainer {
   margin-left: auto;
   margin-right: auto;
-  width: 80%;
+  width: 1024px;
+  padding: 2rem 1rem;
 }
 
 .title {
   color: #0754ad;
-  margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 3.2rem;
+  margin: 0;
+  margin-bottom: 3.2rem;
 }
 
 .link {
